--- a/assets/app/styles/sidebar.scss
+++ b/assets/app/styles/sidebar.scss
@@ -32,7 +32,7 @@
     width: 100%;
 
     &.show-sidebar {
-      transform: translate3d(250px, 0px, 0px);
+      width: calc(100% - 250px);
     }
   }
 }
